# BucketAggregation

./: .gitignore  .gitmodules  35976-Article Text-40048-1-2-20250719-1.pdf:Zone.Identifier  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  anastar_means_heavy_pancake_data.csv  astar_means_grid_full_data.csv  bad_korfs.txt  bucket_metrics.csv  easy.txt  korf.py  means_Heavy_korf_data.csv  means_anastar_grid_data.csv  means_anastar_heavy_korf_data.csv  means_anastar_heavy_pancake_data.csv  means_anastar_pancake_data.csv  means_astar_grid_data.csv  means_astar_heavy_korf_data.csv  means_astar_heavy_pancake_data.csv  means_astar_pancake.csv  means_astar_pancake_data.csv  means_korf_data_anastar.csv  means_korf_data_astar.csv  means_msa_data.csv  msa.hpp  perf.py  perf.txt  plot_efficiency_frontier.py  plot_u_curve.py  temp.txt  test.csv
code_with_notes/: bucket_heap.h  real_bucket_heap.h  two_level_bucket_queue.h
extra_grid/: grid_data.csv
extra_grid/extra_grid_csv/: grid_up_to_200_11.csv  grid_up_to_200_14.csv
heuristic_search-grid/: .gitignore  CMakeLists.txt
heuristic_search-grid/src/: CMakeLists.txt  main.cpp
heuristic_search-grid/src/domains/: grid_2d.hpp  heavy_pancake.hpp  n_puzzle.hpp  pancake_48.hpp  robot_arm.hpp
heuristic_search-grid/src/domains/benchmarks/: Korf.txt  pancakes10.txt  pancakes12.txt  pancakes16.txt  pancakes24.txt  pancakes32.txt  pancakes48.txt  pancakes64.txt  pancakes8.txt
heuristic_search-grid/src/domains/benchmarks/sequences/: 0.faa  1.faa  2.faa  3.faa  4.faa  5.faa
heuristic_search-grid/src/domains/parsers/: n_puzzle_parser.hpp  pancake_48_parser.hpp  pancake_parser.hpp  robot_arm_parser.hpp
heuristic_search-grid/src/experiments/: fifteen_puzzle.hpp  grid_2d.hpp  msa.hpp  pancake.hpp  robot_arm.hpp
heuristic_search-grid/src/priority_queues/: CMakeLists.txt  priority_queue_traits.hpp
heuristic_search-grid/src/priority_queues/policies/: CMakeLists.txt  binary_heap.hpp  bucket_heap.hpp  buffered_bucket_heap.hpp  dual_heap.hpp  focal_heap.hpp  gilon_heap.hpp  lazy_bucket_queue.hpp  timing_queue.hpp  two_level_bucket_queue.hpp  two_level_bucket_queue_ll.hpp
heuristic_search-grid/src/search/: CMakeLists.txt  anytime_search_traits.hpp  default_search_traits.hpp  search_helpers.hpp  search_traits.hpp  search_traits_checks.hpp  solve.hpp
heuristic_search-grid/src/search/algorithms/: CMakeLists.txt  a.hpp  ana.hpp  awa.hpp  dps.hpp  gbfs.hpp  gdps.hpp  iawa.hpp  mana.hpp  mawa.hpp  mdps.hpp  miawa.hpp  moptimistic.hpp  optimistic.hpp  wa.hpp
heuristic_search-grid/src/utils/: CMakeLists.txt  detector.hpp  geometric_ordered_set.hpp  heap_ordered_set.hpp  lazy_ordered_set.hpp  ordered_set.hpp  scope_exit.hpp  time_op.hpp
heuristic_search-grid/src/utils/allocation/: Allocator.h  CMakeLists.txt
heuristic_search-grid/src/utils/allocation/Policies/: BlockPool.h  CMakeLists.txt  SharedBlockPool.h  SharedDoublingPool.h
heuristic_search-grid/src/utils/parallel_hashmap/: CMakeLists.txt
include/: a_star.h  awa.h
include/algorithms/: a_star.h  ana_star.h  anytime_a_star.h  awa.h  dps.h  focal_search.h  greedy_best_first_search.h  weighted_a_star.h
include/environments/: environments.h  (+9 more)
last_csv/: anastar_random_grid_5_2.csv  astar_random_grid_5.csv
python/: a_star.py  ana_bucket_heap.py  ana_bucket_heap_real.py  ana_with_binary_heap.py  ana_with_bucket_heap.py  ana_with_bucket_heap_real.py  awa.py  benchmark.py  binary_heap.py  test_a_star.py  test_ana.py  test_ana_bucket_heap.py  test_awa.py
scripts/: aggregate_means.py  calculate_speedups.py  csv_aggregate.py  graph.py  hero_graph.py  perf_analyzer.py  test.py
src/: binary_heap.cpp  bucket_queue.cpp  dimacs_environment.cpp  environments.cpp  grid_environment.cpp  main.cpp  msa_environment.cpp  pancake_environment.cpp  sliding_tile_environment.cpp  two_level_bucket_queue.cpp
temp/: astar_bucket_random_grid.csv  bucket_metrics.csv  dps.csv
tests/: test_a_star.cpp  test_ana_star.cpp  test_anytime_a_star.cpp  test_awa.cpp  test_binary_heap.cpp  test_bucket_heap.cpp  test_bucket_queue.cpp  test_grid_environment.cpp  test_indexed_binary_heap.cpp  test_pancake_environment.cpp  test_sliding_tile_environment.cpp  test_two_level_bucket_queue.cpp
(+16 files in other folders)
